--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL = 'http://localhost/'
 languageCode = 'en-us'
-title = 'My Portfolio'
+title = 'Mohamed mahmoud Tedeih'
 theme = 'ananke'
 
 [params]
